--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,27 @@ body {
 
 header {
   margin: 2em auto;
-  width: 70em;
+  width: 60em;
   border: 5px solid blue;
   display: flex;
   justify-content: space-between;
 }
+header img {
+  width: 128px;
+  height: 128px;
+}
 nav > ul {
   display: flex;
-  width: 350px;
+  width: 19em;
   justify-content: space-between;
   list-style: none;
+}
+
+nav a {
+  color: black;
+  background-color: orange;
+  padding: 5px;
+  border-radius: 5px;
+  text-decoration: none;
+
 }
