--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,24 @@ nav a {
   text-decoration: none;
 
 }
+div > h1 {
+  margin: 2em auto;
+  max-width: 30em;
+  height: 4em;
+  border: 5px solid blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+h1 {
+  font-size: 3em;
+  font-weight: bold;
+  font-family: "Josefin Slab", Arial, serif;
+
+}
+.background {
+  color: black;
+  background-color: slategray;
+  border-radius: 5px;
+  text-decoration: none;
+}
