--- a/styles.css
+++ b/styles.css
@@ -29,24 +29,25 @@ nav a {
   text-decoration: none;
 
 }
-div > h1 {
+section {
   margin: 2em auto;
-  max-width: 30em;
-  height: 4em;
-  border: 5px solid blue;
+  max-width: 60em;
+  background-color: slategray;
+  height: 10em;
+  border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
+  background:
+  radial-gradient(circle, transparent 20%, slategray 20%, slategray 80%, transparent 80%, transparent),
+  radial-gradient(circle, transparent 20%, slategray 20%, slategray 80%, transparent 80%, transparent) 50px 50px,
+  linear-gradient(#A8B1BB 8px, transparent 8px) 0 -4px,
+  linear-gradient(90deg, #A8B1BB 8px, transparent 8px) -4px 0;
+  background-color: slategray;
+  background-size:100px 100px, 100px 100px, 50px 50px, 50px 50px;
 }
 h1 {
-  font-size: 3em;
+  font-size: 5em;
   font-weight: bold;
   font-family: "Josefin Slab", Arial, serif;
-
-}
-.background {
-  color: black;
-  background-color: slategray;
-  border-radius: 5px;
-  text-decoration: none;
 }
