--- a/styles.css
+++ b/styles.css
@@ -55,22 +55,23 @@ main {
   line-height: 1.5;
   width: 60em;
   display: flex;
-  align-items: baseline;
   justify-content: space-between;
 }
 main div {
-  display; flex;
-  flex-flow: column wrap;
   width: 17em;
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 main img {
   height: 90px;
-  display: flex;
-  justify-content: center;
 }
 h2 {
   font-size: 2em;
   font-weight: bold;
+  font-family: "Josefin Slab", Arial, serif;
+}
+p {
+  font-size: 1em;
   font-family: "Josefin Slab", Arial, serif;
 }
